// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderMessage snapshots user message snapshot 1`] = `
"<div class="message message-user" id="msg_snapshot_user">
  <div class="message-header">
    <span class="message-role">User</span>
    <span class="message-time">02:30 PM</span>
    <span class="message-model">anthropic/claude-3</span>
  </div>
  <div class="message-content">
    <div class="part part-text">
  <p>Hello, can you help me?</p>
</div>
  </div>
</div>"
`;

exports[`renderMessage snapshots assistant message with stats snapshot 1`] = `
"<div class="message message-assistant" id="msg_snapshot_assistant">
  <div class="message-header">
    <span class="message-role">Assistant</span>
    <span class="message-time">02:30 PM</span>
    <span class="message-model">claude-sonnet-4</span>
  </div>
  <div class="message-content">
    <div class="part part-text">
  <p>Of course! I&#39;d be happy to help.</p>
</div>
  </div>
  <div class="message-stats"><span class="stat">Tokens: 100 in / 50 out</span>
<span class="stat">Cost: $0.0010</span>
<span class="stat">Finish: stop</span></div>
</div>"
`;

exports[`renderMessage snapshots assistant message with tools snapshot 1`] = `
"<div class="message message-assistant" id="msg_snapshot_tools">
  <div class="message-header">
    <span class="message-role">Assistant</span>
    <span class="message-time">02:30 PM</span>
    <span class="message-model">claude-sonnet-4-20250514</span>
  </div>
  <div class="message-content">
    <div class="part part-text">
  <p>Let me check that file for you.</p>
</div>
<div class="tool-call tool-read" data-status="completed">
  <div class="tool-header" onclick="this.nextElementSibling.classList.toggle('collapsed')">
    <span class="tool-icon">&#128196;</span>
    <span class="read-file-path" title="Unknown file">Unknown file</span>
    <span class="read-full-path">Unknown file</span>
    
    <span class="read-lines">1 lines</span>
    <span class="tool-toggle">-</span>
  </div>
  <div class="tool-body ">
    <div class="read-content">
      <pre><code>file contents here</code></pre>
    </div>
    
  </div>
</div>
  </div>
  <div class="message-stats"><span class="stat">Tokens: 1.5k in / 500 out</span>
<span class="stat">Cache: 1.0k read</span>
<span class="stat">Cost: $0.013</span>
<span class="stat">Finish: stop</span></div>
</div>"
`;
